    form is left blank.  The correct error is now returned, leaving the
    user at the login page, rather than giving the user a generic error
    page.  Thanks to Petr Grolmus for the report.

    Display the correct WebLogin error when the user enters a password and
    omits the username, and avoid attempting to authenticate with an empty
    username.

    Update to rra-c-util 4.2:

    * Improve the xstrndup utility function.
    * Kerberos test configuration now goes in tests/config.
    * The principal of the test keytab is determined automatically.
    * Build on systems where krb5/krb5.h exists but krb5.h does not.
    * Add bail_krb5 and diag_krb5 test utility functions.
    * Simplify the test suite calls for Kerberos and remctl tests.
    * Ensure config.h is included for portable/stdbool.h.
    * Add test wrappers around asprintf and vasprintf.

    Update to C TAP Harness 1.10:

    * Add test_tmpdir and test_tmpdir_free to TAP library.
    * Add bstrndup function to the C TAP library.
    * runtests now frees all allocated resources on exit.

WebAuth 4.0.2 (2011-12-02)

    Fix a typo that caused the cookie tracking whether a user had
    requested REMOTE_USER authentication to be reset as a session cookie.

    Fix compilation without remctl libraries.

    Port to APR 0.9, which comes with Red Hat Enterprise 4 and
    distributions derived from it.

    Ignore cookies with undefined values in WebLogin and tokens that
    aren't present in the password change page to avoid Perl warnings in
    the Apache error log.

    Document factor codes in the mod_webauth manual.

    Add additional Stanford-specific documentation for how to enable
    multifactor authentication on a WebAuth Application Server at
    Stanford.

    Update to rra-c-util 3.11:

    * Check for a missing ssize_t.
    * Correctly remove -I/usr/include from Kerberos and GSS-API flags.
    * Fix message utility library compiler warnings on 64-bit systems.

WebAuth 4.0.1 (2011-09-23)