@@ -19,6 +19,9 @@ webauth_base64_decode
 webauth_base64_decoded_length
 webauth_base64_encode
 webauth_base64_encoded_length
+webauth_context_free
+webauth_context_init
+webauth_context_init_apr
 webauth_error_message
 webauth_factors_parse
 webauth_factors_string
@@ -27,11 +30,6 @@ webauth_hex_decode
 webauth_hex_decoded_length
 webauth_hex_encode
 webauth_hex_encoded_length
-webauth_info_build
-webauth_info_version
-webauth_context_free
-webauth_context_init
-webauth_context_init_apr
 webauth_key_copy
 webauth_key_create
 webauth_key_free
